[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "janus"
version = "1.0.0"
description = "Janus"
authors = [{name = "DeepSeek-AI"}]
license = {file = "LICENSE-CODE"}
urls = {homepage = "https://github.com/deepseek-ai/Janus"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.1",
    "transformers>=4.38.2",
    "timm>=0.9.16",
    "accelerate",
    "sentencepiece",
    "attrdict",
    "einops",
]

[project.optional-dependencies]
gradio = [
    "gradio==3.48.0",
    "gradio-client==0.6.1",
    "mdtex2html==1.3.0",
    "pypinyin==0.50.0",
    "tiktoken==0.5.2",
    "tqdm==4.64.0",
    "colorama==0.4.5",
    "Pygments==2.12.0",
    "markdown==3.4.1",
    "SentencePiece==0.1.96"
]
lint = [
    "isort",
    "black[jupyter] >= 22.6.0",
    "pylint[spelling] >= 2.15.0",
    "flake8",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-docstrings",
    "flake8-pyi",
    "flake8-simplify",
    "ruff",
    "pyenchant",
    "pre-commit",
]

rocm = [
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchvision==0.20.1",
    "pytorch-triton-rocm==3.1.0",
]
cuda = [
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchvision==0.20.1",
    "pytorch-triton==3.0.0",
]
cpu = [
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchvision==0.20.1",
    "pytorch-triton==3.0.0",
]

[tool.uv]
package = false
conflicts = [[{ extra = "cuda" }, { extra = "cpu" }, { extra = "rocm" }]]
[tool.uv.sources]
torch = [
    { index = "torch-cpu", extra = "cpu" },
    { index = "torch-cuda", extra = "cuda" },
    { index = "torch-rocm", extra = "rocm" },
]
torchvision = [
    { index = "torch-cpu", extra = "cpu" },
    { index = "torch-cuda", extra = "cuda" },
    { index = "torch-rocm", extra = "rocm" },
]
torchaudio = [
    { index = "torch-cpu", extra = "cpu" },
    { index = "torch-cuda", extra = "cuda" },
    { index = "torch-rocm", extra = "rocm" },
]

# tool.uv.sources.<package-name>[number].index does not propagate.
# https://github.com/astral-sh/uv/issues/8253
pytorch-triton-rocm = [{ index = "torch-rocm", extra = "rocm" }]
pytorch-triton = [
    { index = "torch-cpu", extra = "cpu" },
    { index = "torch-cuda", extra = "cuda" },
]

# Example for using GitHub packages
# gymnasium = { git = "https://github.com/Farama-Foundation/Gymnasium", rev = "5bc344e03ae457712b49bf06c20a313b6b1accc4" }


[[tool.uv.index]]
name = "torch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2"
explicit = true

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true



[tool.setuptools]
packages = {find = {exclude = ["images"]}}
